--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,18 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+
+
+
+
+
+    <% if (!user) { %>
+    	<p>Welcome! Please <a href="/login">log in</a>.</p>
+    <% } else { %>
+    	<p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p>
+    <% } %>
+
+
   </body>
 </html>
