--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -17,8 +17,8 @@
         <div class="bs-component">
           <ul class="list-group">
             <li class="list-group-item">
-              <span class="badge">14</span>
-              Cras justo odio
+              <span class="badge"><%= JSON.stringify(posts.length) %></span>
+              Posts
             </li>
             <li class="list-group-item">
               <span class="badge">2</span>
@@ -36,6 +36,70 @@
     </div>
 
 
+    <div class='row '>
+      <div class="col-lg-7">
+      </div>
+
+      <div class="col-lg-5">
+
+        <p class="bs-component">
+          <a href="/v1/admin/posts/new" class="btn btn-default btn-lg btn-block">New Post</a>
+        </p>
+
+
+        <!-- <div class="bs-component" style="margin-bottom: 15px;">
+          <div class="btn-group btn-group-justified">
+            <a href="#" class="btn btn-default">Left</a>
+            <a href="#" class="btn btn-default">Middle</a>
+            <a href="#" class="btn btn-default">Right</a>
+          </div>
+        </div>
+
+        <div class="bs-component" style="margin-bottom: 15px;">
+          <div class="btn-toolbar">
+            <div class="btn-group">
+              <a href="#" class="btn btn-default">1</a>
+              <a href="#" class="btn btn-default">2</a>
+              <a href="#" class="btn btn-default">3</a>
+              <a href="#" class="btn btn-default">4</a>
+            </div>
+
+            <div class="btn-group">
+              <a href="#" class="btn btn-default">5</a>
+              <a href="#" class="btn btn-default">6</a>
+              <a href="#" class="btn btn-default">7</a>
+            </div>
+
+            <div class="btn-group">
+              <a href="#" class="btn btn-default">8</a>
+              <div class="btn-group">
+                <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                  Dropdown
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Dropdown link</a></li>
+                  <li><a href="#">Dropdown link</a></li>
+                  <li><a href="#">Dropdown link</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="bs-component">
+          <div class="btn-group-vertical">
+            <a href="#" class="btn btn-default">Button</a>
+            <a href="#" class="btn btn-default">Button</a>
+            <a href="#" class="btn btn-default">Button</a>
+            <a href="#" class="btn btn-default">Button</a>
+          </div>
+        </div> -->
+
+      </div>
+
+
+    </div>
 
 
 
@@ -59,22 +123,22 @@
             <div class="list-group">
 
               <% posts.forEach(function(e) {  %>
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading"><%= e.title %></h4>
-                <p class="list-group-item-text"><%= e.html %></p>
-              </a>
-              <% }); %>
+                <a href="#" class="list-group-item">
+                  <h4 class="list-group-item-heading"><%= e.title %></h4>
+                  <p class="list-group-item-text"><%= e.html %></p>
+                </a>
+                <% }); %>
 
+              </div>
             </div>
           </div>
-        </div>
-        <!--end post -->
+          <!--end post -->
 
+
+        </div>
 
       </div>
-
     </div>
-  </div>
-  <p><%= JSON.stringify(posts) %></p>
-</body>
-</html>
+    <p><%= JSON.stringify(posts) %></p>
+  </body>
+  </html>
