--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/css/bootstrap.css' />
+
   </head>
   <body>
