--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,4 @@
-<%- include('./template/header', {title: 'title'}); %>
-<a href="/login/facebook">Log In with Facebook</a>
+<%- include('./template/header', {title: 'Register'}); %>
 <div class="container">
 
   <div class="row">
@@ -8,19 +7,31 @@
     </div>
     <div class="col-lg-8">
       <div class="well bs-component">
-        <form class="form-horizontal" action="/v1/login" method="POST">
+        <form class="form-horizontal" method="post" target="/v1/register">
           <fieldset>
-            <legend>Legend</legend>
+            <legend>Register User</legend>
+            <div class="form-group">
+              <label for="inputFirstname" class="col-lg-2 control-label">First Name</label>
+              <div class="col-lg-10">
+                <input type="text" class="form-control" id="firstname" name="firstname" placeholder="firstname">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputLastnamee" class="col-lg-2 control-label">Last Name</label>
+              <div class="col-lg-10">
+                <input type="text" class="form-control" name="lastname" id="lastname" placeholder="lastname">
+              </div>
+            </div>
             <div class="form-group">
               <label for="inputEmail" class="col-lg-2 control-label">Email</label>
               <div class="col-lg-10">
-                <input type="text" class="form-control" id="email" name="username" placeholder="Email">
+                <input type="text" class="form-control" name="email"  id="email" placeholder="Email">
               </div>
             </div>
             <div class="form-group">
               <label for="inputPassword" class="col-lg-2 control-label">Password</label>
               <div class="col-lg-10">
-                <input type="password" class="form-control" id="pass" name="password" placeholder="Password">
+                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
                 <div class="checkbox">
                   <label>
                     <input type="checkbox"> Checkbox
