fix passport login and facebook loggin

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     </div>
     <div class="col-lg-8">
       <div class="well bs-component">
-        <form class="form-horizontal" action="/v1/login" method="POST">
+        <form class="form-horizontal" action="/login" method="POST">
           <fieldset>
             <legend>Legend</legend>
             <div class="form-group">
